--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,10 @@
   <meta name="description" content="CoreUI Pro Angular Admin Template">
   <meta name="author" content="Łukasz Holeczek">
   <meta name="keyword" content="Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript">
-	<link rel="shortcut icon" href="assets/favicon.ico">
-	<title>CoreUI Pro Angular Admin Template</title>
+  <link rel="shortcut icon" href="assets/favicon.ico">
+  <title>CoreUI Pro Angular Admin Template</title>
 </head>
 <body class="app">
-  <!-- App Loading... -->
+  <app-root></app-root>
 </body>
 </html>
