--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="CoreUI Pro Angular Admin Template">
+  <meta name="description" content="AAACESA - Almacenes Fiscalizados">
   <meta name="author" content="Łukasz Holeczek">
-  <meta name="keyword" content="Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript">
+  <meta name="keyword" content="Control de Clientes de AAACESA">
   <link rel="shortcut icon" href="assets/favicon.ico">
-  <title>CoreUI Pro Angular Admin Template</title>
+  <title>AAACESA - Almacenes Fiscalizados</title>
 </head>
 <body class="app">
   <app-root></app-root>
