--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
   <meta name="keyword" content="Control de Clientes de AAACESA">
   <link rel="shortcut icon" href="assets/favicon.ico">
   <title>AAACESA - Almacenes Fiscalizados</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="app">
   <app-root></app-root>
