--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,3 @@
-<!--
-* CoreUI Pro - Angular Admin Template
-* @version v2.0.0
-* @link https://coreui.io/pro/angular/
-* Copyright (c) 2018 creativeLabs Łukasz Holeczek
-* License (https://coreui.io/pro/license)
--->
 <!doctype html>
 <html>
 <head>
@@ -13,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="AAACESA - Almacenes Fiscalizados">
-  <meta name="author" content="Łukasz Holeczek">
+  <meta name="author" content="AAACESA">
   <meta name="keyword" content="Control de Clientes de AAACESA">
   <link rel="shortcut icon" href="assets/favicon.ico">
   <title>AAACESA - Almacenes Fiscalizados</title>
